Agregamos un titulo

--- a/Clase 1. Variables var-vs-let .html
+++ b/Clase 1. Variables var-vs-let .html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
+    <h2>Clase 1. Variables var VS let</h2>
     <script>
         // Variable de ambito global
         var hola = "Hola Mundo";
