Cambio nombre carpeta y archivos para mejorar organización

--- a/Clase 02. Constantes/Clase 02. Constantes.html
+++ b/Clase 02. Constantes/Clase 02. Constantes.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
-    <h2>Clase 7. undefined-null-NaN</h2>
+    <h2>Clase 02. Constantes</h2>
+
     <script src="app.js"></script>
 </body>
 
