--- a/Clase 07. undefined-null-NaN/Clase 07. undefined-null-NaN.html
+++ b/Clase 07. undefined-null-NaN/Clase 07. undefined-null-NaN.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
-    <h2>Clase 1. Variables var VS let</h2>
+    <h2>Clase 07. undefined-null-NaN</h2>
     <script src="app.js"></script>
 </body>
 
