--- a/Clase 01. Variables var-vs-let/Clase 01. Variables var-vs-let .html
+++ b/Clase 01. Variables var-vs-let/Clase 01. Variables var-vs-let .html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
-    <h2>Clase 9. Arreglos (Arrays)</h2>
+    <h2>Clase 01. Variables var VS let</h2>
     <script src="app.js"></script>
 </body>
 
