--- a/Clase 03. Cadenas de Texto (Strings)/Clase 03. Cadenas de Texto (Strings).html
+++ b/Clase 03. Cadenas de Texto (Strings)/Clase 03. Cadenas de Texto (Strings).html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
-    <h2>Clase 5. Números (Numbers)</h2>
+    <h2>Clase 03. Cadenas de Texto (Strings)</h2>
     <script src="app.js"></script>
 </body>
 
