--- a/Clase 05. Números (Numbers)/Clase 05. Números (Numbers).html
+++ b/Clase 05. Números (Numbers)/Clase 05. Números (Numbers).html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
-    <h2>Clase 6. Booleans</h2>
+    <h2>Clase 05. Números (Numbers)</h2>
     <script src="app.js"></script>
 </body>
 
