--- a/Clase 06. Booleans/Clase 06. Booleans.html
+++ b/Clase 06. Booleans/Clase 06. Booleans.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
-    <h2>Clase 8. Funciones</h2>
+    <h2>Clase 06. Booleans</h2>
     <script src="app.js"></script>
 </body>
 
