--- a/Clase 08. Funciones/Clase 08. Funciones.html
+++ b/Clase 08. Funciones/Clase 08. Funciones.html
@@ -10,8 +10,7 @@
 
 <body>
     <h1>Fundamentos JavaScript</h1>
-    <h2>Clase 2. Constantes</h2>
-
+    <h2>Clase 08. Funciones</h2>
     <script src="app.js"></script>
 </body>
 
